--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,14 +5,18 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    <script
+      src="https://kit.fontawesome.com/5f66a178df.js"
       crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
+      rel="stylesheet"
     />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Welcome To DevConnector</title>
+    <title>DevHub</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
